stylesheets/commons/BigMatch.scss
/* ... */
.match-bm-lol-players-player-loadout-rs {
	display: flex;
	flex-direction: column;
	align-items: flex-start;
	gap: 0.25rem;

	&-wrap {
		display: flex;
		flex-direction: row;
		align-items: flex-start;
		gap: 4px;
	}

	img {
		width: 1.5rem;
		height: 1.5rem;
	}
}

.match-bm-lol-game-overview {
	background-color: #ffffff;
	border: 1px solid #bbbbbb;
	border-radius: 0.5rem;
	padding: 0.5rem;

	.theme--dark & {
		background-color: var( --clr-secondary-16 );
		border-color: var( --clr-on-surface-dark-primary-8 );
	}
}

.match-bm-lol-game-summary {
	display: flex;
	flex-direction: row;
	justify-content: space-evenly;
	align-items: center;

	&-team {
		display: flex;
		align-items: center;
		gap: 4px;
	}

	&-center {
		display: flex;
		align-items: center;
	}

	&-faction {
		width: 20px;
		height: 20px;

		@media ( max-width: 435px ) {
			width: 16px;
			height: 16px;
		}
	}

	&-score {
		font-weight: bold;
		line-height: 100%;
		font-size: 1.25rem;

		@media ( max-width: 435px ) {
			font-size: 1rem;
		}

		&-holder {
			display: flex;
			flex-direction: column;
			justify-content: center;
			align-items: center;
			padding: 0 1rem;
			gap: 4px;
			text-align: center;
		}
	}

	&-map {
		font-weight: bold;
		line-height: 100%;
		font-size: 1rem;

		@media ( max-width: 435px ) {
			font-size: 0.75rem;
		}
	}

	&-length {
		font-weight: normal;
		line-height: 100%;
		font-size: 1rem;

		@media ( max-width: 435px ) {
			font-size: 0.75rem;
		}
	}
}

.match-bm-match-additional {
	display: flex;
	gap: 1rem;
	flex-wrap: wrap;
	border: 1px solid #bbbbbb;
	border-radius: 0.5rem;
	padding: 0.5rem;

	.theme--light & {
		background-color: #ffffff;
	}

	.theme--dark & {
		background-color: var( --clr-secondary-16 );
		border-color: var( --clr-on-surface-dark-primary-8 );
	}

	@media ( max-width: 767px ) {
		flex-direction: column;
	}

	&-comments {
		display: flex;
		justify-content: center;
		align-items: center;
		flex: 3 0 100%;
		flex-direction: column;
		padding: 0.5rem;
		gap: 4px;
		border-radius: 0.5rem;
		background: var( --clr-on-surface-light-primary-8 );

		.theme--dark & {
			background-color: var( --clr-on-surface-dark-primary-8 );
		}

		> div {
			display: block;
			text-align: center;
			vertical-align: middle;
			white-space: normal;
		}
	}

	&-section {
		flex: 1 0 20%;
		border-radius: 0.5rem;
		background: var( --clr-on-surface-light-primary-8 );
		display: flex;
		flex-flow: column;
		padding: 0.5rem;

		.theme--dark & {
			background-color: var( --clr-on-surface-dark-primary-8 );
		}

		.theme--dark & {
			border-color: var( --clr-secondary-25 );
		}

		&-header {
			display: flex;
			justify-content: center;
			align-items: center;
			padding-bottom: 0.5rem;
			font-weight: bold;
			height: 2.375rem;
			flex-grow: 0;
		}

		&-body {
			display: flex;
			gap: 0.5rem;
			padding: 1rem 0.5rem;
			justify-content: center;
			align-items: center;
			flex-grow: 1;
			border-radius: 0.5rem;
			background: var( --clr-background );

			.theme--dark & {
				background-color: var( --clr-secondary-16 );
				border-color: var( --clr-on-surface-dark-primary-8 );
			}

			&.match-table-wrapper {
				padding: unset;
				
				& > table.wikitable {
					border-radius: 0.5rem;
					overflow: hidden;
					height: 100%;
					width: 100%;
				}
			}
		}
	}
}

.match-bm-team-stats {
	border: 0.0625rem solid #bbbbbb;
	border-radius: 0.5rem;
	margin-bottom: 1rem;
	overflow: hidden;

	.theme--dark & {
		border-color: var( --clr-secondary-25 );
	}

	&-header {
		display: flex;
		flex-direction: column;
		align-items: center;
		background: #eaecf0;
		border-bottom: 0.0625rem solid #bbbbbb;
		padding: 1rem 0;
		gap: 0.5rem;

		.theme--dark & {
			background-color: var( --clr-secondary-16 );
			border-color: var( --clr-secondary-25 );
		}

		@at-root html h4#{&}-title {
			font-weight: bold;
			text-transform: uppercase;
			color: var( --clr-on-background ) !important;
			margin: 0;
			padding: 0;
		}

		&-time {
			display: flex;
			gap: 0.5rem;
			align-items: center;
			justify-content: center;
		}
	}

	&-container {
		display: flex;
		flex-wrap: wrap;
	}

	&-team {
		flex: 1;
		display: flex;
		flex-direction: column;
		align-items: center;
		justify-content: center;
		gap: 1rem;
		padding: 1rem 0;

		@media ( max-width: 767px ) {
			flex: 1 0 50%;
			order: 1;
		}

		&-side {
			font-weight: bold;
			text-transform: uppercase;
		}

		&-state {
			background-color: var( --clr-on-background );
			border-radius: 0.875rem;
			min-height: 1.5rem;
			color: #ffffff;
			padding: 0.125rem 0.5rem;
			text-transform: uppercase;
			font-weight: bold;
			width: 5.5rem;
			text-align: center;

			&.state--winner {
				background-color: var( --clr-semantic-positive-40 );
			}

			&.state--loser {
				background-color: var( --clr-semantic-negative-40 );
			}
		}
	}

	&-list {
		flex: auto;
		display: flex;
		flex-direction: column;

		.wiki-dota2 & {
			@media ( min-width: 768px ) {
				border-left: 1px solid #bbbbbb;
				border-right: 1px solid #bbbbbb;

				.theme--dark & {
					border-color: var( --clr-on-surface-dark-primary-8 );
				}
			}
		}

		@media ( max-width: 767px ) {
			flex: 1 0 100%;
			order: 2;
		}

		& > :nth-child( odd ) {
			.theme--light & {
				background-color: var( --clr-on-surface-light-primary-4 );
			}

			.theme--dark & {
				background-color: var( --clr-on-surface-dark-primary-4 );
			}
		}

		&-row {
			display: flex;

			&:not( :last-child ) {
				border-bottom: 0.0625rem solid #bbbbbb;

				.theme--dark & {
					border-color: var( --clr-secondary-25 );
				}
			}
		}

		&-cell {
			display: flex;
			justify-content: center;
			flex: 1;
			align-items: center;
			min-height: 2.75rem;
			gap: 0.5rem;
			font-weight: bold;

			&.cell--middle {
				font-weight: normal;

				.theme--dark .wiki-leagueoflegends & img {
					filter: invert( 1 );
				}
			}

			.slash {
				opacity: 0.4;
			}
		}
	}
}
/* ... */

